--- a/farmacia_front/src/app/app.html
+++ b/farmacia_front/src/app/app.html
@@ -1,1 +1,10 @@
-<router-outlet />
+
+<nav class="bg-gray-800 p-4 text-white flex gap-4">
+    <a href="/productos">Productos</a>
+    <a href="/proveedores">Proveedores</a>
+    <a href="/login">Login</a>
+</nav>
+
+<div>
+    <router-outlet></router-outlet>
+</div>
