--- a/farmacia_front/src/app/productos/productos.html
+++ b/farmacia_front/src/app/productos/productos.html
@@ -9,7 +9,8 @@
 
     <div class="flex flex-col lg:flex-row gap-8 justify-center">
       <form
-        (ngSubmit)="guardarProducto()"
+        #f="ngForm"
+        (ngSubmit)="guardarProducto(f)"
         class="w-full max-w-md bg-white p-6 rounded-2xl shadow-lg space-y-4 border border-orange-100"
       >
         <h2 class="text-xl font-bold mb-4 text-gray-700">
@@ -19,10 +20,11 @@
         <input
           [(ngModel)]="producto.nombre"
           name="nombre"
-          placeholder="Nombre"
           required
+          placeholder="Nombre"
           class="border p-2 rounded-lg w-full focus:outline-none focus:ring-2 focus:ring-orange-400 transition"
         />
+
         <input
           [(ngModel)]="producto.marca"
           name="marca"
@@ -79,7 +81,6 @@
         </div>
       </form>
 
-      <!-- Tabla -->
       <div
         class="w-full overflow-x-auto bg-white rounded-2xl shadow-lg border border-orange-100"
       >
