--- a/farmacia_front/src/app/camfarm/camfarm.html
+++ b/farmacia_front/src/app/camfarm/camfarm.html
@@ -12,12 +12,13 @@
         Administra y controla de manera eficiente tus medicamentos, productos y
         stock en tiempo real.
       </p>
-      <button
-        routerLink="/productos"
+      <a href="/productos">
+        <button
         class="mt-6 px-6 py-3 bg-orange-500 text-white rounded-xl shadow-lg hover:bg-orange-600 transition"
       >
         Ver Inventario
-      </button>
+      </button></a>
+      
     </section>
 
     <section class="px-6 py-12">
@@ -29,14 +30,14 @@
           class="bg-white rounded-2xl shadow-md p-6 border-l-4 border-orange-500"
         >
           <h3 class="text-lg font-semibold text-gray-800">Medicamentos</h3>
-          <p class="text-3xl font-bold text-orange-600 mt-2">124</p>
-          <p class="text-sm text-gray-500">Total en stock</p>
+          <p class="text-3xl font-bold text-orange-600 mt-2">{{this.totalProductos}}</p>
+          <p class="text-sm text-gray-500">Productos registrados</p>
         </div>
         <div
           class="bg-white rounded-2xl shadow-md p-6 border-l-4 border-yellow-500"
         >
           <h3 class="text-lg font-semibold text-gray-800">Categorías</h3>
-          <p class="text-3xl font-bold text-yellow-600 mt-2">12</p>
+          <p class="text-3xl font-bold text-yellow-600 mt-2">09</p>
           <p class="text-sm text-gray-500">Tipos de productos</p>
         </div>
         <div
