Creacion de modales para detalles y un crud de medicamentosproveedores

--- a/farmacia_front/src/app/Componentes/navbar/navbar.html
+++ b/farmacia_front/src/app/Componentes/navbar/navbar.html
@@ -87,9 +87,9 @@
           >Listado de Proveedores</a
         >
         <a
-          href="/proveedores"
+          href="/proveedores/medicamentos"
           class="block px-4 py-2 rounded hover:bg-orange-500 transition-colors"
-          >Agregar Proveedores</a
+          >Agregar Productos</a
         >
       </div>
     </div>
