--- a/farmacia_front/src/app/Componentes/provmedic/provmedic.html
+++ b/farmacia_front/src/app/Componentes/provmedic/provmedic.html
@@ -8,8 +8,8 @@
     <div>
       <label class="block font-semibold">Proveedor:</label>
       <select
-        [(ngModel)]="nuevo.proveedorId"
-        (change)="cargarMedicamentosProveedor(nuevo.proveedorId)"
+        [(ngModel)]="nuevo.proveedor.id"
+        (change)="cargarMedicamentosProveedor(nuevo.proveedor.id)"
         name="proveedorId"
         class="border rounded p-2 w-full"
       >
@@ -23,7 +23,7 @@
     <div>
       <label class="block font-semibold">Medicamento:</label>
       <select
-        [(ngModel)]="nuevo.medicamentoId"
+        [(ngModel)]="nuevo.medicamento.id"
         name="medicamentoId"
         class="border rounded p-2 w-full"
       >
@@ -51,32 +51,5 @@
     >
       Agregar Producto
     </button>
-
-    <div *ngIf="medicamentosProveedor.length > 0" class="mt-6">
-      <h3 class="text-lg font-semibold">Medicamentos del Proveedor</h3>
-      <table class="min-w-full border mt-2">
-        <thead class="bg-orange-500 text-white">
-          <tr>
-            <th class="py-2 px-4">Medicamento</th>
-            <th class="py-2 px-4">Precio</th>
-            <th class="py-2 px-4">Acciones</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let mp of medicamentosProveedor" class="border-b">
-            <td class="py-2 px-4">{{ mp.medicamentoId }}</td>
-            <td class="py-2 px-4">{{ mp.precioCompra | currency : "USD" }}</td>
-            <td class="py-2 px-4">
-              <button
-                (click)="eliminar(mp.id!)"
-                class="bg-red-600 text-white px-3 py-1 rounded hover:bg-red-700"
-              >
-                Eliminar
-              </button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
   </div>
 </div>
