feat: Listar ventas y crearlas

--- a/farmacia_front/src/app/Componentes/navbar/navbar.html
+++ b/farmacia_front/src/app/Componentes/navbar/navbar.html
@@ -44,12 +44,12 @@
         <a
           href="/productos"
           class="block px-4 py-2 rounded hover:bg-orange-500 transition-colors"
-          >Listado de Productos</a
+          >Gestionar Productos</a
         >
         <a
-          href="/productos"
+          href="/ventas"
           class="block px-4 py-2 rounded hover:bg-orange-500 transition-colors"
-          >Agregar Elementos</a
+          >Gestionar Venta</a
         >
       </div>
     </div>
